# a9-cli

./: Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/: main.rs
