[package]
name = "a9-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "a9"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
must_use_candidate = "allow"
